Fixed Social Icons position on mobile

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -152,8 +152,13 @@ html, body {
 	.buttons a {
 		margin-bottom: 20px;
 	}
-	.about ul a {
-		background-color: #eee;
+	.about ul {
+		a {
+			background-color: #eee;
+		}
+		li {
+			margin: 10px;
+		}
 	}
 }
 
